------------------- Upcoming version 9.0 -----------------------------

User tools and API improvements and changes:

- The 'xnonblock' option of SCOREP_MPI_ENABLE_GROUPS is deprecated.
  Measurements always record extended non-blocking events.

Bugfixes:

- Score-P now gracefully handles undefined behavior exploited by the
  application when using the Pthread API instead of aborting the
  application.
- Allow to build against LLVM's libunwind.
- Fix segmentation fault when trying to parse certain function names.
- Fix segmentation fault when executing OpenMP target regions on the
  host.
- Score-P records program arguments again. The feature was disabled due
  to issues on some HPC systems. Please report if there are any issues
  again.

------------------- Released version 8.0 -----------------------------

Major features:

- Add support to record CUDA NVTX instrumentation.
- Support compiler instrumentation even if compilers use different
  flags and different instrumentation interface per language (C, C++,
  Fortran). This applies to combinations where the C/C++ compilers are
  Clang-based but Fortran still support the traditions vendor's
  instrumentation only (e.g., Cray and Fujitsu).
  Intel's `-tcollect` instrumentation and compile-time filtering
  fades out. `-tcollect` is only used if no alternative is
  available. Usually `-finstrument-functions(-after-inlining)`
  serves as the replacement with classic/oneAPI compilers.
  Support for IBM XL older than version 11 was removed.
  Support for PGI compilers that don't support the
  `__cyg_profile_func` instrumentation API was removed.
- Support for recording AMD HIP activities. It requires an LLVM/Clang
  based compiler.
- Add support for MPI intercommunicators.
- Support OpenMP's tool interface OMPT for host events as a
  replacement for OPARI2 instrumentation. The OMPT adapter is
  considered experimental. To use OMPT as default OpenMP
  instrumentation, add `--enable-default=ompt` to your configure line.