@@ -5,6 +5,11 @@ User tools and API improvements and changes:
 - The 'xnonblock' option of SCOREP_MPI_ENABLE_GROUPS is deprecated.
   Measurements always record extended non-blocking events.
 
+Compatibility:
+
+- The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
+  deprecated. Use the `SCOREP_USER_*` macros instead.
+
 Bugfixes:
 
 - Score-P now gracefully handles undefined behavior exploited by the
